Swagger docs for wishes
