# server/app/controllers/api/v1/wishes_controller.rb
@@ -1,19 +1,33 @@
+require 'uri'
 class Api::V1::WishesController < ApplicationController
   before_action :set_api_user
   before_action :set_api_user_wish, only: [:show, :update, :destroy]
+  #before_action :set_wish, only: [:show, :update, :destroy]
 
   #GET /api_users/:api_user_id/wishes
   def index
-    @wishes = @api_user.wishes.includes(:programminglanguage).includes(:meetinginterval)
+    @wishes = @api_user.wishes.includes(:programminglanguage).includes(:meetinginterval)  if params[:api_user_id]
+    #@wishes = Wish.includes(:programminglanguage).includes(:meetinginterval).all if params[:wishes]
+
+    ###Write query like http://localhost:3000/api/v1/api_user/1/wishes/?available_offline=true
     @wishes = @wishes.where(available_offline: true) if params[:available_offline] == 'true'
+    @wishes = @wishes.where(available_offline: false) if params[:available_offline] == 'false'
     @wishes = @wishes.where(available_online: true) if params[:available_online] == 'true'
+    @wishes = @wishes.where(available_online: false) if params[:available_online] == 'false'
+    #@wishes = @wishes.where(programminglanguage: "SCALA") if params[:language] ==
+    #puts CGI.parse(URI.parse(request.url).query).values[0][0]
+
+    ##binding.pry
+
     #Explanation regarding includes: not necessary to link programming languages and meeting interval to Wishes, but it means there is only one call to the database during which it pulls all the information linked  by foreign keys in case it needs it in the future. 
   end
 
   # Post /api_users/:api_user_id/wishes
   def create
-    @api_user.wishes.create!(wish_params)
-    json_response(@api_user, :created)
+    @wish1 = @api_user.wishes.create!(wish_params)
+    #json_response(@api_user, :created)
+    # @wish = Wish.create!(wish_params)
+    json_response(@wish1, :created)
   end
 
   #GET /api_users/:api_user_id/wishes/:wish_id
@@ -36,6 +50,7 @@ class Api::V1::WishesController < ApplicationController
 
   def wish_params
     params.permit(:available_offline, :available_online, :goal, :api_user_id, :id, :programminglanguage_id, :meetinginterval_id, :mentee)
+    # params.permit(:available_offline, :available_online, :goal, :api_user_id, :programminglanguage_id, :meetinginterval_id)
   end
 
   def set_api_user
@@ -45,5 +60,9 @@ class Api::V1::WishesController < ApplicationController
   def set_api_user_wish
     @wish = @api_user.wishes.find_by!(id: params[:id]) if @api_user
   end
+
+  # def set_wish
+  #   @wish = Wish.includes(:programminglanguage).includes(:meetinginterval).find(params[:id])
+  # end
 
 end
